Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34536

Seeing io_notifier_remove_fd warnings in the log

XMLWordPrintable

    • iOS/tvOS/watchOS
    • cab363afa347e22c5f738f15533489e0cd671d59

      Upon registering QSocketNotifier in BB10, a spurious warning is logged:
      "io_notifier_remove_fd fd 17 not found"

      It seems to be related to the call order in QEventDispatcherBlackberry:

      // Call the base Unix implementation. Needed to allow select() to be called correctly
      QEventDispatcherUNIX::registerSocketNotifier(notifier);

      // Register the fd with bps
      BpsChannelScopeSwitcher channelSwitcher(d->bps_channel);
      int io_events = ioEvents(sockfd);
      if (io_events)
      bps_remove_fd(sockfd);

      The call to super::registerSocketNotifier causes an entry in enabled_fds
      for given type, thus the ioEvents() returns nonzero and the code tries
      to clean up underlying bps first, which complains...

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bweimer Bernd Weimer
            nenik Petr NejedlĂ˝
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes